--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:teensy36]
+[platformio]
+default_envs = debug
+
+[env]
 platform = teensy
 board = teensy36
 framework = arduino
 lib_deps = 
 	sparkfun/SparkFun BNO080 Cortex Based IMU@^1.1.12
+
+
+[env:release]
+build_type = release
+build_flags = 
+	-D NDEBUG
+
+[env:debug]
+build_type = debug
